# libstud-uuid

./: CMakeLists.txt
libstud/uuid/: version.hxx
